fix: criado testes para o customerMapper, criado classe CustomerResponseSimpleDto, corrigido testes nos services.