@@ -1,14 +1,14 @@
 package com.victorvilar.projetoempresa.mappers;
 
 import com.victorvilar.projetoempresa.dto.customer.CustomerCreateDto;
-import com.victorvilar.projetoempresa.dto.customer.CustomerResponseDto;
+import com.victorvilar.projetoempresa.dto.customer.CustomerResponseDefaultImplDto;
+import com.victorvilar.projetoempresa.dto.customer.interfaces.CustomerResponseDto;
 import com.victorvilar.projetoempresa.domain.Customer;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class CustomerMapper {
@@ -25,10 +25,14 @@ public class CustomerMapper {
     }
 
     public CustomerResponseDto toCustomerResponseDto(Customer customer){
-        return this.mapper.map(customer, CustomerResponseDto.class);
+        return this.mapper.map(customer, CustomerResponseDefaultImplDto.class);
+    }
+
+    public CustomerResponseDto toCustomerResponseDto(Customer customer,Class<? extends CustomerResponseDto> dto){
+        return this.mapper.map(customer,dto);
     }
 
     public List<CustomerResponseDto> toCustomerResponseDtoList(List<Customer> clientes){
-        return clientes.stream().map(e -> toCustomerResponseDto(e)).collect(Collectors.toList());
+        return clientes.stream().map(this::toCustomerResponseDto).toList();
     }
 }
